# CSCE315-Project3-Mirror

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-ninja.sh  build.sh
etc/: README.md
eugenics/: algorithm.cc  algorithm.h  bfs.cc  binary_gate.h  build_list.cmake  circuit.cc  circuit.h  gate.cc  gate.h  genetic.cc  genetic.h  genetic_circuit.cc  genetic_circuit.h  getopts.h  inputnode.h  inputnodeevaluator.h  ionode.h  jvalgorithm.cc  jvalgorithm.h  logic_gates.cc  logic_gates.h  main.cc  outputnode.h  outputnodeevaluator.h  test_algorithm.cc  test_circuit.cc  test_genetic.cc  test_getopts.cc  test_innocuous.cc  test_jv_algorithm.cc  test_list.cmake  test_main.cc  test_visualize.cc  traditional_algorithm.cc  traditional_algorithm.h  unary_gate.h  utility.cc
eugenics-system/: .gitignore  CMakeLists.txt  README.md
eugenics-system/etc/: README.md
eugenics-system/eugenics/: CMakeLists.txt
eugenics-system/include/: README.md
eugenics-system/lib/: README.md
eugenics-system/libraries/: README.md
eugenics-system/local/: README.md
eugenics-system/lookingglass/: CMakeLists.txt  src
eugenics-system/lookingglass/lib/: README.md
eugenics-system/share/doc/: README.md
eugenics-system/share/doc/Design-Document/: Design-Document.md
eugenics-system/share/examples/: xorcircuit.txt
eugenics-system/share/man/: lookingglass.1
eugenics-system/share/scripts/: README.md  gflags-211.rb  gflags.rb  install-gflags.sh  install-gtest.sh
eugenics-system/share/scripts/git-hooks/: README.md
eugenics-system/var/: README.md
lookingglass/: build_list.cmake  circuits.py  genetic.py  main.cc  test.txt  test_main.cc  test_mat.py  test_output.txt  visualize.py
lookingglass/include/: README.md
share/: README.md  build.sh
share/cmake/: README.md
share/doc/Design-Document/: Design-Document.org  Design-Document.tex
share/doc/Design-Document/auto/: Design-Document.el
share/examples/: README.md  circuit.txt
share/man/: README.md  gauss.1  lookingglass.1
share/scripts/: build.sh  gflags.rb  install-gflags.sh
share/scripts/git-hooks/: pre-push
src/: CMakeLists.txt  README.md  eugenics  lookingglass  main.cc
src/eugenics/: CMakeLists.txt  main.cc
src/lookingglass/: CMakeLists.txt  main.cc
sys/eugenics/: CMakeLists.txt  src
sys/eugenics/include/: README.md
sys/eugenics/lib/: README.md
sys/share/cmake/: FindGFlags.cmake
sys/share/man/: README.md  eugenics.1
sys/share/scripts/: install-gflags.sh
var/: .gitconfig
